Add i18n english strings to admin violations

--- a/html/pfappserver/lib/pfappserver/I18N/en.po
+++ b/html/pfappserver/lib/pfappserver/I18N/en.po
@@ -9435,7 +9435,7 @@ msgstr "Auto Registration"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "autoreg_action"
-msgstr "Register node"
+msgstr "Register node on violation"
 
 # pfappserver::Model::Node::Tab::MSE (MSE Tab)
 msgid "band"
@@ -9531,7 +9531,7 @@ msgstr "cell phone"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "close_action"
-msgstr "Close a violation"
+msgstr "Close violation"
 
 # pf::Authentication::Source::ADSource (available_attributes)
 # pf::Authentication::Source::LDAPSource (available_attributes)
@@ -9843,11 +9843,11 @@ msgstr ""
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "email_admin_action"
-msgstr ""
+msgstr "Email violation to administrator"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "email_user_action"
-msgstr ""
+msgstr "Email violation to user"
 
 # conf/documentation.conf (advanced.language options)
 msgid "en_US"
@@ -9950,7 +9950,7 @@ msgstr ""
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "enforce_provisioning_action"
-msgstr ""
+msgstr "Evaluate provisioning policies on violation"
 
 # pf::Authentication::constants (Conditions)
 msgid "equals"
@@ -9966,7 +9966,7 @@ msgstr "Event Type"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "external_action"
-msgstr ""
+msgstr "Send violation to external"
 
 # conf/documentation.conf
 msgid "fencing"
@@ -10312,7 +10312,7 @@ msgstr ""
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "log_action"
-msgstr "Log message"
+msgstr "Log violation"
 
 # pf::Authentication::constants (Conditions)
 msgid "lower"
@@ -10954,7 +10954,7 @@ msgstr "Redis Port"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "reevaluate_access_action"
-msgstr "Reevaluate Access Action"
+msgstr "Isolate device on violation"
 
 # html/pfappserver/root/admin/nodes.tt
 # pfappserver::Model::Node (availableStatus)
@@ -10976,7 +10976,7 @@ msgstr "Role"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "role_action"
-msgstr "Set role"
+msgstr "Assign role on violation"
 
 # html/pfappserver/lib/pfappserver/Form/User.pm
 # html/pfappserver/root/admin/users.tt
@@ -11421,7 +11421,7 @@ msgstr "unregistered"
 
 # pf::action (VIOLATION_ACTIONS)
 msgid "unreg_action"
-msgstr "Deregister node"
+msgstr "Deregister node on violation"
 
 # /usr/local/fingerbank/conf/fingerbank.conf.doc
 msgid "upstream"
