--- a/html/pfappserver/lib/pfappserver/I18N/fr.po
+++ b/html/pfappserver/lib/pfappserver/I18N/fr.po
@@ -12413,3 +12413,63 @@ msgstr ""
 # html/pfappserver/root/config/profile/tab-content.tt
 msgid "Enter SSID"
 msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "add_person"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "close_violation"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "deregister_node_ip"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "dynamic_register_node"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "modify_node"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "modify_person"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "reevaluate_access"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "register_node"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "register_node_ip"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "release_all_violations"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "trigger_scan"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "trigger_violation"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "unreg_node_for_pid"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "update_ip4log"
+msgstr ""
+
+# pf::action (SYSLOG_PARSER_REGEX_VIOLATION_ACTIONS)
+msgid "update_ip6log"
+msgstr ""
